fixes for scrollbars on edges

--- a/css/app.css
+++ b/css/app.css
@@ -346,3 +346,6 @@ select:invalid {
   width: 100%;
   opacity: 0.25;
 }
+.carousel-page:not(.active) {
+  overflow-y: hidden !important;
+}
