--- a/css/common.css
+++ b/css/common.css
@@ -253,3 +253,16 @@ input[type="text"] {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+#submit-spotify-link {
+  background-color: var(--accent-1);
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  aspect-ratio: 1 / 1;
+  box-sizing: border-box;
+  font-weight: 800;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  user-select: none;
+  cursor: pointer;
+}
